fixed bug for del job info and update btn of back.
conflict

--- a/views/jobinfo/add.html
+++ b/views/jobinfo/add.html
@@ -68,7 +68,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button id="submitBtn" type="submit" class="btn btn-primary">添加新任务</button>
-                <a id="backBtn" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
+                <a id="backBtn" class="btn btn-info" role="button" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
                     返回
                 </a>
             </div>
