--- a/views/jobinfo/info.html
+++ b/views/jobinfo/info.html
@@ -84,7 +84,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
 
-                <a id="backBtn" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
+                <a id="backBtn" class="btn btn-info" role="button" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
                     返回
                 </a>
             </div>
