--- a/views/jobinfo/edit.html
+++ b/views/jobinfo/edit.html
@@ -70,7 +70,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button id="submitBtn" type="submit" class="btn btn-primary">修改任务</button>
-                <a id="backBtn" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
+                <a id="backBtn" class="btn btn-info" role="button" href="javascript:window.history.go(-1);" style="margin-left: 50px;">
                     返回
                 </a>
             </div>
